syntax = "proto3";

option csharp_namespace = "CommandService.Protos";

service GrpcPlatfrom {
    rpc GetAllPlatforms(GetAllRequest) returns (PlatformResposneDto);
} 

message GetAllRequest { }

message GrpcPlatfromModel {
	int32 platfromId = 1;
    string name = 2;
    //optional string description = 3;
    string publisher = 4;
}

message PlatformResposneDto {
    repeated GrpcPlatfromModel platforms = 1;
}